--- a/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/Angular-CSharp/Properties/launchSettings.json
+++ b/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/Angular-CSharp/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:8080",
-      //#if(NoHttps)
+      //#if(!RequiresHttps)
       "sslPort": 0
       //#else
       "sslPort": 44300
@@ -22,7 +22,7 @@
     "Company.WebApplication1": {
       "commandName": "Project",
       "launchBrowser": true,
-      //#if(NoHttps)
+      //#if(!RequiresHttps)
       "applicationUrl": "http://localhost:5000",
       //#else
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
