--- a/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/Angular-CSharp/appsettings.json
+++ b/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/Angular-CSharp/appsettings.json
@@ -1,11 +1,26 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
-  },
+////#if (IndividualLocalAuth)
+//  "ConnectionStrings": {
+////#if (UseLocalDB)
+//    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Company.WebApplication1-53bc9b9d-9d6a-45d4-8429-2a2761773502;Trusted_Connection=True;MultipleActiveResultSets=true"
+////#else
+//    "DefaultConnection": "DataSource=app.db"
+////#endif
+//  },
+////#endif
   "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+////#if (IndividualLocalAuth)
+//  "IdentityServer": {
+//    "Clients": {
+//      "Company.WebApplication1": {
+//        "Profile": "IdentityServerSPA"
+//      }
+//    }
+//  },
+////#endif
+"AllowedHosts": "*"
 }
