[Components] Prerrendering startup experience * Introduces an IComponentPrerrenderer to handle Prerrendering   * MVC registers a basic static prerrrenderer.   * Components registers a more feature complete prerrender that will     handle reconnection to the original circuit after prerrendering in     the future to allow for prerrendered interactive components. * Removes UseRazorComponents   * Removes the SPA fallback in favor of a catch all route in     Index.cshtml   * Moves the framework files to be served by the default StaticFiles     middleware in the pipeline by way of plugging specific providers     through options.   * Lifts UseSignalR(r => r.MapHub<ComponentHub>()) into startup and     replaces it with a shorthand for MapHub using endpoint routing.   * Adds extension methods to map components to selectors for a given     hub.

--- a/src/Components/Server/src/Microsoft.AspNetCore.Components.Server.csproj
+++ b/src/Components/Server/src/Microsoft.AspNetCore.Components.Server.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.AspNetCore.Components.Browser" />
+    <Reference Include="Microsoft.AspNetCore.Components.Server.Abstractions" />
     <Reference Include="Microsoft.AspNetCore.SignalR" />
     <Reference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" />
     <Reference Include="Microsoft.AspNetCore.StaticFiles" />
@@ -30,7 +30,7 @@
   <ItemGroup Condition="'$(BuildNodeJS)' != 'false'">
     <!-- We need .Browser.JS to build first so we can embed its .js output -->
     <ProjectReference Include="..\..\Browser.JS\src\Microsoft.AspNetCore.Components.Browser.JS.npmproj" ReferenceOutputAssembly="false" />
-    <EmbeddedResource Include="..\..\Browser.JS\src\dist\components.server.js" LogicalName="frameworkFiles\%(Filename)%(Extension)" />
+    <EmbeddedResource Include="..\..\Browser.JS\src\dist\components.server.js" LogicalName="_framework\%(Filename)%(Extension)" />
   </ItemGroup>
 
 </Project>
