--- a/src/Components/test/testassets/ComponentsApp.Server/ComponentsApp.Server.csproj
+++ b/src/Components/test/testassets/ComponentsApp.Server/ComponentsApp.Server.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Reference Include="Microsoft.AspNetCore.Components.Server" />
+    <Reference Include="Microsoft.AspNetCore.Mvc" />
     <ProjectReference Include="..\ComponentsApp.App\ComponentsApp.App.csproj" />
   </ItemGroup>
 
