--- a/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/React-CSharp/appsettings.Development.json
+++ b/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/React-CSharp/appsettings.Development.json
@@ -5,5 +5,14 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+////#if (IndividualLocalAuth)
+//  },
+//  "IdentityServer": {
+//    "Key": {
+//      "Type": "Development"
+//    }
+//  }
+////#else
+//  }
+////#endif
 }
