--- a/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/React-CSharp/ClientApp/package.json
+++ b/src/ProjectTemplates/Web.Spa.ProjectTemplates/content/React-CSharp/ClientApp/package.json
@@ -6,6 +6,9 @@
     "bootstrap": "^4.1.3",
     "jquery": "3.3.1",
     "merge": "^1.2.1",
+////#if (IndividualLocalAuth)
+//    "oidc-client": "^1.6.1",
+////#endif
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
